--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <h3>La base es: <strong>{{base}}</strong></h3>
 <button (click)="acumular(base)">+{{base}}</button>
 <span>{{numero}}</span>
-<button (click)="acumular(-base)">-{{base}}</button>-->
+<button (click)="acumular(-base)">-{{base}}</button>
 <app-contador></app-contador>
-<!--<app-heroe></app-heroe>-->
-<app-listado></app-listado>
+<app-heroe></app-heroe>
+<app-listado></app-listado>-->
+<app-main-page></app-main-page>
